--- a/Text/abreviation.tex
+++ b/Text/abreviation.tex
@@ -24,4 +24,14 @@
 \acro{SVM}{Support Vector Machines }
 \acro{RMSE}{Root Mean Square Error }
 \acro{LOOCV}{Leave One Out Cross-Validation }
+\acro{SMO}{Sequential Minimal Optimization}
+\acro {MCAR}{Missing Completely At Random}  
+\acro {MAR} {Missing At Random}
+\acro {MNAR}{Missing Not At Random}  
+\acro{AA}{Assimilées aux Ajournées}
+\acro{TDD}{Test-Driven Development}
+\acro{CI}{Continuous Integration}
+\acro{JSON}{Java Script Object Notation}
+\acro{MVC}{Model View Controller}
+\acro{API}{Application Programming Interface}
 \end{acronym}
