--- a/Text/firstChapiter.tex
+++ b/Text/firstChapiter.tex
@@ -1,12 +1,12 @@
 \chapter{Généralités sur le DataMining }
 \paragraph{}
-Nous sommes submergées des données et leur quantité augmente du jour au lendemain . Les ordinateurs, les smart-phones et de plus en plus des équipements connectées nous submergent et sont omniprésents dans notre vie et cela nous permet de générer des très grandes quantités des données , toutes nos décisions , nos choix dans les supermarchés,nos habitudes financières sont sauvegardées dans d'énormes bases des données.
+Nous sommes submergés des données et leur quantité augmente du jour au lendemain , Les ordinateurs, les smart-phones et de plus en plus des équipements connectées nous submergent et sont omniprésents dans notre vie et cela nous permet de générer des très grandes quantités des données , toutes nos décisions , nos choix dans les supermarchés,nos habitudes financières sont sauvegardées dans d'énormes bases des données.
 
-L'internet est aussi submergé des informations c'est ce qui fait que chaque choix, chaque clic que nous faisons soit sauvegardé , ceci n'étant  que des choix personnels mais qui ont d'innombrables contreparties dans le monde du commerce et de l'industrie .
-Mais paradoxalement on a pu constaté  que plus les données augmentent et sont générées de moins en moins les personnes les comprennent   et ainsi un immense fossé s'est créé entre le volume des données générées et la capacité de compréhension de celles ci.
+L'internet est aussi submergé des informations , c'est ce qui fait que chaque choix, chaque clic que nous faisons soit sauvegardé , ceci n'étant  que des choix personnels mais qui ont d'innombrables contreparties dans le monde du commerce et de l'industrie .
+Mais paradoxalement , on a pu constaté  que plus les données augmentent et sont générées de moins en moins les personnes les comprennent   et ainsi un immense fossé s'est créé entre le volume des données générées et la capacité de compréhension de celles ci.
 D'où l'importance de mettre en place des méthodes et techniques qui faciliterons l'analyse et l'obtention des informations considérables de ces données.
 \section{Définitions}
-Dans cette partie nous allons définir 3 termes qui portent souvent à confusion : L'intelligence Artificielle,Le Machine Learning ou apprentissage automatique, La fouille des données ou Le DataMining, nous tenterons de dégager à la fin les différences et les ressemblances entre ces  termes.
+Dans cette partie,  nous allons définir 3 termes qui portent souvent à confusion : L'intelligence Artificielle,Le Machine Learning ou apprentissage automatique, La fouille des données ou Le DataMining, nous tenterons de dégager à la fin les différences et les ressemblances entre ces  termes.
 \subsection{L'intelligence Artificielle}
 L’intelligence artificielle(IA) est un domaine de l’informatique dédié à la création de matériel et de logiciels capables d’imiter la pensée humaine. Le but principal de l’intelligence artificielle est de rendre les ordinateurs plus intelligents en produisant des logiciels permettant à un ordinateur d’émuler des fonctions du cerveau humain dans des applications définies. L’idée n’est pas de remplacer l’être humain mais de lui donner un outil plus puissant afin de l’aider à accomplir ses tâches.\cite{coursKasoro}\\
 L'Intelligence artificielle est un domaine de l'Informatique qui a pour but de développer des machines 
@@ -24,7 +24,8 @@ Le DataMining ou la  fouille de données est une technique  consistant à recher
 
 Certains auteurs comme M. BATER\cite{MBaterBook} le définissent comme  une discipline scientifique qui a pour but l'analyse exploratoires des grandes quantités des données , la découvertes des modèles utiles ,valides , inattendus ainsi que  la connaissances compréhensibles dans celles ci. Outre la découvertes de l'information il englobe la collecte , le nettoyage et le traitement de ces données.
 \paragraph{}
-Le datamining peut aussi être défini comme un processus inductif, itératif  et interactif de découverte dans les bases de données  larges de modèles des données valides, nouveaux, utiles et compréhensibles.\cite{DMdef}
+Le data mining peut aussi être défini comme un processus inductif, itératif  et interactif de découverte dans les bases de données  larges de modèles des données valides, nouveaux, utiles et compréhensibles.\cite{DMdef}
+
 - 	Itératif :     nécessite plusieurs passes
 
 - 	Interactif :   l'utilisateur est dans la boucle du processus
@@ -37,8 +38,8 @@ Le datamining peut aussi être défini comme un processus inductif, itératif  e
 
 -	Compréhensibles : présentation simple
 
-\subsection{ {  Différence entre le DataMining , le Machine Learning, ainsi que les statistiques .} 
-	\cite{differenceMLDM2} \cite{differenceMLDM} \cite{differenceMLDMStack}}
+\subsection{  Différence entre le DataMining , le Machine Learning, ainsi que les statistiques .} 
+	{\cite{differenceMLDM2} \cite{differenceMLDM} \cite{differenceMLDMStack}}
 \paragraph{}
 A première vue on pourrait constater que ces 3 disciplines n'ont aucune différence car tous traitent de la même question : comment apprendre des données ?, couvrent les mêmes matières et utilisent les mêmes techniques qui sont entre autres : la régression linéaire, la régression logistique  , le réseau des neurones , le Support Vector Machine ,....
 \paragraph{} 
@@ -53,4 +54,5 @@ Il nécessite l'étude des algorithmes qui peuvent extraire l'information utile 
 - L'intelligence artificielle se focalise sur la création des agents intelligents , en pratique il consiste à programme un ordinateur pour qu'il simule le fonctionnement du cerveau humain . Qu'il exécute certaines taches comme un homme parmi ces taches figure la faculté d'apprendre sur base de l'expérience.
 \section{{ Différentes Techniques du Machine Learning   \cite{AndNgCourse}	} } 
 Dans cette partie nous allons passer en revue quelques méthodes et algorithmes utilisées dans le machine learning.
-Notons que ces méthodes se divisent en 2 groupes : l'apprentissage supervisée et l'apprentissage non supervisé.Concernant l'apprentissage supervisé nous parlerons de la régression linéaire , la régression, le réseau des neurones, le SVM(Support Vector Machine) , les arbres de décision et nous finirons par le Random Forrest qui n'est qu'une amélioration des arbres de décisions, et pour l'apprentissage non supervisé nous allons parler de K-means.  
+Notons que ces méthodes se divisent en 2 groupes : l'apprentissage supervisée et l'apprentissage non supervisé.Concernant l'apprentissage supervisé nous parlerons de la régression linéaire , la régression, le réseau des neurones, le SVM(Support Vector Machine) , les arbres de décision et nous finirons par le Random Forrest qui n'est qu'une amélioration des arbres de décisions.
+Dans ce travail nous parlerons beaucoup plus des techniques de classification.
