--- a/Text/introduction.tex
+++ b/Text/introduction.tex
@@ -7,35 +7,35 @@
 \chapter*{Introduction}
 	\addcontentsline{toc}{chapter}{Introduction}
 \section{Problématique}
-Arrivés à la fin de leurs études secondaires la plupart des élèves finalistes du secondaire et, futurs universitaires sont confrontés au problème de choix de filières pour poursuivre leur études universitaires.
-Plusieurs options s'offrent à eux et ainsi ils se trouvent dans un embarras de choix, la plupart d'entre eux choisissent mal leurs orientations.
-C'est pour cela que nous remarquons qu'en première année d'université,le pourcentage d'échec ou d'abandon est très élevé suite à une mauvaise orientation des étudiants.\cite{Articl1Mr} 
+Arrivés à la fin de leurs études secondaires la plupart des élèves finalistes et, futurs universitaires sont confrontés au problème de choix de filières pour poursuivre leur études universitaires.
+Plusieurs options s'offrent à eux et ainsi ils se trouvent dans un embarras de choix.La plupart d'entre eux choisissent mal leurs orientations.
+C'est pour cela que nous remarquons qu'en première année ,le pourcentage d'échec ou d'abandon est très élevé suite à une mauvaise orientation des étudiants.\cite{Articl1Mr} 
 \paragraph{}
-En effet,améliorer le processus d'orientation des nouveaux étudiants à leur entré à l'université pourrait diminuer le taux d'échec et d'abandon en première année .
+En effet,améliorer le processus d'orientation des nouveaux étudiants à leur entrée à l'Université pourrait diminuer le taux d'échec et d'abandon en première année .
 \paragraph{}
-Il s'avère donc important de doter les universités des outils d'aide à la décision qui pourront leur permettre de bien orienter les étudiants avant d'entreprendre leurs études universitaires et ainsi leur permettre d'y tirer pleine satisfaction.  
+Il s'avère donc important de doter les universités des outils d'aide à la décision qui pourront leur permettre de bien orienter les étudiants avant qu'il entreprennent  leurs études universitaires et ainsi leur permettre d'y tirer pleine satisfaction.  
 \paragraph{}
-D'où nous nous sommes posés les questions suivantes : \\
+Au regard de ce qui précède nous sommes posés les questions suivantes : \\
 - \emph{Comment utiliser les techniques  du data mining pour doter les universités des outils d'aide à la décision les permettant de bien orienter les étudiants dès leur entrée à l'université ?  }\\
 - \emph{Comment peut-on aider les élèves finalistes du secondaires  à pouvoir faire le choix de leur filières à l'université ? }\\
 - \emph{Les techniques du data mining peuvent - elles apporter leur contribution dans ce domaine ? }
 \section{Intérêts et Motivations du Sujet}
 Nous avons choisi de parler du sujet sur le data mining à cause de notre passion pour les mathématiques et les sciences prédictives mais aussi car au 21 ème siècles l'immensité des données générées par les systèmes d'information ne cesse de croitre d'où il s'avère important de les analyser et apprendre de ces données !\\
-Mais aussi l'intérêt scientifique de ce travail sera de fournir un outil de base à tous chercheur qui aimera aussi travail dans ce domaine dans les jours à venir. \\
-Nous avons choisi de parler de l'orientation des étudiants car durant notre parcours universitaire nous avons constaté un fort taux d'abandon et d'échec due à une mauvaise orientation et ainsi nous voulions aider tant soit peut à résoudre ce problème. 
+Mais aussi l'intérêt scientifique de ce travail sera de fournir un outil de base à tout chercheur qui aimera aussi travail dans ce domaine dans les jours à venir. \\
+Nous avons choisi également de parler de l'orientation des étudiants car durant notre parcours universitaire nous avons constaté un fort taux d'abandon et d'échec due à une mauvaise orientation et ainsi nous voulons aider tant soit peut à résoudre ce problème. 
 \section{Hypothèses de Travail}
 Une hypothèse est  une supposition qui est faite en réponse à une question de recherche. \cite{MethFr} \\
-Pour notre travail nous supposerons que les universités ainsi disposent d'une énorme quantité des données et qu'on peut les analyser enfin d'y découvrir des patterns cachés qui peuvent nous permettre de prédire l'orientation d'un nouvel étudiant sur base de ses résultats à l'école secondaire.  \\
-- Dans ce travail nous avions prédit la moyenne des points \ac{CGPA}qu'un étudiant peut obtenir au cours de son cursus académique  dans chaque faculté sur bases des informations qu'il dispose à son inscription et le proposé une orientation en se basant sur les résultat prédits. \\
-- Pour y arriver nous avions utiliser différentes techniques du data-mining entre autre les statistiques descriptives , inférentielle , et différents algorithmes du Machine Learning pour analyser les données et découvrir les variables qui influencent la réussite d'un nouveau étudiant à l'université
+Pour notre travail nous supposerons que les universités ainsi disposent d'une énorme quantité des données et qu'on peut les analyser anfin d'y découvrir des patterns cachés qui peuvent nous permettre de prédire l'orientation d'un nouvel étudiant sur base de ses résultats à l'école secondaire.  \\
+- Dans ce travail nous avons prédit la moyenne des points \ac{CGPA}qu'un étudiant peut obtenir au cours de son cursus académique  dans chaque faculté sur bases des informations qu'il dispose à son inscription et les proposer une orientation en se basant sur les résultat prédits. \\
+- Pour y arriver nous avons utiliser différentes techniques du data-mining entre autre les statistiques descriptives , inférentielles , et différents algorithmes du Machine Learning pour analyser les données et découvrir les variables qui influencent la réussite d'un nouvel étudiant à l'université
 \section{Objectifs du travail}
-L'objectif d’une recherche se divise en deux parties: l'objectif général concerne la contribution que les chercheurs espèrent apporter en étudiant un problème donné; les objectifs opérationnels concernent les activités que les chercheurs comptent mener en vue
+L'objectif d’une recherche est double : l'objectif général concerne la contribution que les chercheurs espèrent apporter en étudiant un problème donné; les objectifs opérationnels concernent les activités que les chercheurs comptent mener en vue
 d'atteindre l'objectif général. \cite{MethFr} \\
 Pour notre travail l'objectif général sera de fournir un outil d'aide à la décision en nous basant sur les techniques du data mining plus précisément différents modèles de régression linéaires régularisé. \\
 Cet outil se présentera sous forme de service web de type \ac{REST} que les universités peuvent intégrer facilement dans leurs systèmes d'informations.
 \section{Méthodes et Techniques de Recherche}
 Pour atteindre notre objectif,notre  travail utilisera la méthodologie de \ac{CRISP-DM} qui est le processus standard d’un projet data mining, elle définit les étapes pour la conduite d’un projet en le rendant plus efficace plus rapide et moins couteux. \cite{DMProces}  \\
-Cette méthodologie se base sur la technique documentaire qui consister à consulter les archives des universités et ainsi que le système d'information \ac{UAT}en vue d'y collecter les données. \\
+Cette méthodologie se base sur la technique documentaire qui consiste à consulter les archives des universités et ainsi que le système d'information \ac{UAT}en vue d'y collecter les données. \\
 Elle utilise également les enquêtes ainsi que les interviews auprès des conseillers d'orientations d'universités pour savoir comment se déroule l'activité de l'orientation des étudiants.
 \section{Subdivision du travail}
 Hormis l'introduction et la conclusion ce travail sera subdivisé en cinq chapitres.  
