--- a/bib/litterature.bib
+++ b/bib/litterature.bib
@@ -186,7 +186,7 @@ pages      =  {10},
 	booktitle={The elements of statistical learning},
 	pages={485--585},
 	year={2009},
-	publisher={Springer}
+	publisher={Springer},
 }
 
 @article{missinValues,
@@ -295,4 +295,11 @@ pages      =  {10},
 	author={Cornec, Matthieu},
 	year={2009},
 	school={Université de Nanterre-Paris X}
+}
+@book{TDD,
+	author    =  {Kent Beck },
+	title      =  {Test Driven Development: By Example},
+	year        =  {2002},
+	publisher={Addison-Wesley Professional},
+	location ={New York}
 }
