--- a/text/dedicaces.tex
+++ b/text/dedicaces.tex
@@ -14,7 +14,9 @@
 \begin{dedication}
 A cette perle rare qui a illuminé ma vie et qui fut ma seule motivation lors de la rédaction de ce travail.\\
 A celle qui dès le bas age m'a appris à lire , à écrire , à étudier , qui s'est battue pour faire de moi l'homme que je suis devenu aujourdh'ui ma très chère maman \textbf{\textit{Byamungu Yvette}}.\\
-A toute la communauté des  utilisateurs du célèbre site \textbf{\textit{stackexchange.com}} et l'inventeur du moteur de recherche \textbf{\textit{google.com}}
+A toute la communauté des  utilisateurs du célèbre site \textbf{\textit{stackexchange}} et l'inventeur du moteur de recherche \textbf{\textit{google}}. \\
+je dédie ce travail
+
 \end{dedication}
 
 
