--- a/text/remerciements.tex
+++ b/text/remerciements.tex
@@ -15,7 +15,7 @@ A tous les enseignants et personnels du Collège Alfajiri particulièrement le P
 \paragraph{}
 Je remercie aussi Mme Rachel, étudiante en faculté de psychologie et science de l'éducation  , pour sa collaboration en me fournissant des données précises sur l'orientation des étudiants.
 \paragraph{}
-Je souhaite particulièrement remercier Mrs ..., Enseignant de Français  pour sa précieuse aide à la relecture et à la correction de mon mémoire. 
+Je souhaite particulièrement remercier l'entreprise SCOPEX ITS, pour leur soutient lors de la rédaction de ce travail. 
 \paragraph{}
 A nos familles et nos amis et camarades de classe  qui par leurs prières et leurs encouragements, on a pu surmonter tous les obstacles , nous abstenons de citer leurs noms car si nous le faisions nous manquerons de place pour le contenu de ce travail .
 \paragraph{}
