--- a/text/secondChapiter.tex
+++ b/text/secondChapiter.tex
@@ -28,7 +28,7 @@ Ils interviennent pour trois objectifs qui sont :
 Les jeunes confrontés aux choix d’orientation ont besoin  d’une écoute attentive de la part de leurs parents. Les parents  ne sont pas forcément aux faits des filières de formation et  ne connaissent pas tous les métiers mais ils peuvent être au  jour le jour un soutien pour leur enfant qui s’interroge.
 		\item \textit{\textbf{Les enseignants}} \\
 		Dont l’action même d’enseigner est partie prenante de l’orientation et qui doivent aussi y exercer une mission précise.
-Quoiqu’i en soit, en matière d’orientation, les enseignants exercent une influence déterminante par la seule mise œuvre de leurs démarches pédagogiques. Ils disposent, par les outils et les méthodes qu’ils utilisent ainsi que par leur comportement, des moyens d’agir sur certains éléments constitutifs de la maturation des choix de l’élève, particulièrement sur l’image qu’il se forge de lui. Les enseignants aident l’élève à prendre conscience  de ses potentialités et guide ses choix d’orientation.  
+Quoiqu’il en soit, en matière d’orientation, les enseignants exercent une influence déterminante par la seule mise œuvre de leurs démarches pédagogiques. Ils disposent, par les outils et les méthodes qu’ils utilisent ainsi que par leur comportement, des moyens d’agir sur certains éléments constitutifs de la maturation des choix de l’élève, particulièrement sur l’image qu’il se forge de lui. Les enseignants aident l’élève à prendre conscience  de ses potentialités et guide ses choix d’orientation.  
 	\item \textit{\textbf{Le chef d’établissement}} \\
 	Le chef d’établissement joue aussi un rôle fondamental dans la préparation de ses élèves à l’orientation. Il est responsable du dispositif d’orientation mis en place dans son établissement. C’est sous sa responsabilité que le programme d’information et d’orientation s’élabore et s’applique. Il est le garant du respect des réglementations en vigueur, mais au-delà il imprime selon ses convictions son expérience et les caractéristiques des populations dont il a la charge, le mouvement qui induit généralement à une véritable politique de l’information et de l’orientation. Il a un rôle particulièrement important dans la mise en œuvre des procédures d’orientations, dans le déroulement du dialogue avec les parents et dans le suivi des décisions.
 	\item \textit{\textbf{Le conseiller d'orientation}} \\
@@ -114,7 +114,7 @@ Son but est de :
 \paragraph{}
 Notons également que quand le dialogue entre l'équipe éducative et la famille n’a pas permis d'aboutir à une  décision commune, les parents peuvent engager une procédure d'appel regroupant la commission d’appel. Cette dernière est présidée par  le directeur des services académiques, ayant l’objectif de réexaminer la décision d'orientation  en fonction des notes de l'élève, de ses capacités, de ses difficultés, de ses projets. Son point  de vue est extérieur.  Ainsi, les membres de la commission (chefs d'établissement, professeurs,  conseillers d’orientation...) ne sont pas directement impliqués dans l’histoire scolaire de  l’élève.
 \section{L'orientation à l' \ac{ULPGL} /GOMA  \cite{OrBk6} }
-Abordant la question de l’orientation à l’université libre des pays des grands lacs, l’orientation est assurée par l’apparitorat  central et la direction de scolarité. 
+Abordant la question de l’orientation à \ac{ULPGL} est assurée par l’apparitorat  central et la direction de scolarité. 
 \paragraph{}
 Dès son arrivé à l’université, on présente au candidat un papier sur lequel toutes les facultés sont mentionnées ainsi que les orientations, mais en plus les exigences pour chaque faculté. 
  A part cela, l’étudiant doit écrire une lettre manuscrite, et doit compléter une fiche de demande d’inscription, et déposer son dossier contenant : son diplôme d’Etat ou son équivalent, une attestation de naissance, une attestation de bonne vie et mœurs, une attestation de célibat, une attestation de nationalité, une attestation de résidence  (pour les étrangers) et un certificat d’aptitude physique. Après avoir fournis tous ces éléments, la direction de scolarité va siéger et analyser le dossier du candidat avant de le soumettre à un examen écrit.   
