--- a/text/abstract.tex
+++ b/text/abstract.tex
@@ -1,16 +1,16 @@
 \selectlanguage{english} 
 \begin{abstract}
 \addcontentsline{toc}{chapter}{Abstract}
- In the digital age, Tera-bytes of data is generated per the second by :Mobile devices, digital photographs, web documents,Facebook updates,Tweets, Blogs, User-generated,Transactions, sensor data, surveillance data,Queries, clicks, browsing;cheap storage has made possible to maintain this data, but it has been unused while it contains useful informations and insights,  that why we need data mining : \textit{the process of analyzing large amounts of data in an effort to find correlations, patterns, and insights}
+ In the digital age, Tera-bytes of data is generated per the second by :Mobile devices, digital photographs, web documents,facebook updates,tweets, blogs, user-generated,Transactions, sensor data, surveillance data,queries, clicks, browsing;cheap storage has made possible to maintain this data, but it has been unused while it contains useful informations and insights,  that why we need data mining : \textit{the process of analyzing large amounts of data in an effort to find correlations, patterns, and insights}
  \paragraph{}
 Many research has been made on the use of data mining in industries such as telecoms, insurances,banks, etc
 but education domain has been unexplored that why we decided to works on the topic :\textit{Mining educational dataset to improve student orientation at  the university }
 \paragraph{}
-We tried to answer his question : \textit{How can we use modern data mining technics to provide to universities tools that can help them to improve new student orientation at the universities? } to answer that question we have conducted this research by following the cross industry standard process for data mining .
+We tried to answer his question : \textit{How can we use modern data mining technics to provide  universities tools that can help them to improve new student orientation ? } To answer that question we have conducted this research by following the cross industry standard process for data mining .
 \paragraph{}
-We have collected data from the information system \ac{UAT} for \ac{ULPGL} and our initial dataset had 9606 rows and 22 columns  which represent the records of data for each student who studied at \ac{ULPGL} from 2012 to 2016 ,based on that dataset we  discovered how student  distributed by gender , option , school, and percentage in the national examination.
+We have collected data from the information system called \ac{UAT} for \ac{ULPGL} and our initial dataset had 9606 rows and 22 columns  which represent the records of data for each student who studied at \ac{ULPGL} from 2012 to 2016 ,based on that dataset we  discovered how student  are distributed by gender , option , school, and percentage in the national examination, etc
 \paragraph{}
-We have used statistics test (chi-square ,\ac{ANOVA}, Pearson, correlation)and predictive models  to analyze student marks  and try to discover what are criteria students use to choose theirs departments when they start university, after that we predicted \ac{CGPA} in  with theirs marks , the field they studied and their secondary school name in each department of \ac{ULPGL} by stacking 3 different regressors and 2 different \ac{SVM} models  .
+We have used statistics test (chi-square ,\ac{ANOVA}, Pearson correlation)and predictive models  to analyze student marks  and try to discover what are criteria students use to choose theirs departments when they start university, after that we predicted \ac{CGPA} in  with theirs marks , the field they studied and their secondary school name in each department of \ac{ULPGL} by stacking 3 different regressors models and 2 different \ac{SVM} models  .
 \paragraph{}
 We evaluated the final model by using cross validation and \ac{RMSE} and found  a score of less than 10\% in each department .
 And finally we have  built a web application  that suggests a new student theirs orientation according to the CGPA predicted. \\
